--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,16 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 .strava-embed {
     flex: 1;
 }
-
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    margin: auto;
+    width: 50%;
+    border: 3px solid black;
+    padding: 10px;
+  }
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
