--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,13 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
     margin: auto;
     width: 50%;
-    border: 3px solid black;
-    padding: 10px;
+    /*border: 3px solid black;
+    padding: 10px; */
+  }
+  .center-text {
+    text-align: center;
   }
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
