--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,21 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     text-align: center;
     font-size: 1.25em;
   }
+
+  .navbar-toggler {
+    display: none;
+  }
+  
+  /* Show the navbar-toggler on screens smaller than 600px */
+  @media (max-width: 600px) {
+    .w3-bar-item {
+      display: none;
+    }
+    .navbar-toggler {
+      display: block;
+    }
+  }
+  
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
